# scidataflow

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  easy_install.sh
.github/workflows/: rust.yml
dev/: test_data.py
src/: data.rs  dryad.rs  figshare.rs  lib.rs  logging_setup.rs  macros.rs  main.rs  project.rs  remote.rs  traits.rs  utils.rs  zenodo.rs
src/lib/: assets.rs  data.rs  download.rs  macros.rs  progress.rs  project.rs  remote.rs  status.rs  test_utilities.rs  utils.rs
src/lib/api/: dryad.rs  figshare.rs  zenodo.rs
tests/: test_project.rs
tests/common/: mod.rs
