[package]
name = "scidataflow"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "tests/test_data/**/*"]

[lib]
name = "scidataflow"
path = "src/lib.rs"

[[bin]]
name = "sdf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo"] }
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.180"
serde_yaml = "0.9.25"
chrono = { version ="0.4.26", features = ["serde"] }
serde_derive = "1.0.180"
md5 = "0.7.0"
timeago = "0.4.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
unicode-width = "0.1.10"
tokio = { version = "*", features = ["full"] }
structopt = "0.3.26"
async-trait = "0.1"
serde_json = "1.0.104"
anyhow = "1.0.72"
url = "2.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
pbr = "1.1.1"
trauma = "2.2.3"
console = "0.15.7"
dirs = "5.0.1"
tempfile = "3.8.0"
rand = "0.8.5"
flate2 = "1.0.27"
lazy_static = "1.4.0"
httpmock = "0.6.8"
cd = "0.2.1"
indicatif = { version = "0.17.6", features = ["futures"] }

