[package]
name = "scidataflow"
version = "0.8.0"
edition = "2021"
exclude = ["logo.png", "tests/test_data/**"]
license = "MIT"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/vsbuffalo/scidataflow"

[lib]
name = "scidataflow"
path = "src/lib.rs"

[[bin]]
name = "sdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo"] }
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.180"
serde_yaml = "0.9.25"
chrono = { version ="0.4.26", features = ["serde"] }
serde_derive = "1.0.180"
md5 = "0.7.0"
timeago = "0.4.1"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tokio = { version = "*", features = ["full"] }
serde_json = "1.0.104"
anyhow = "1.0.72"
url = "2.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
trauma = "2.2.3"
dirs = "5.0.1"
tempfile = "3.8.0"
rand = "0.8.5"
flate2 = "1.0.27"
lazy_static = "1.4.0"
httpmock = "0.6.8"
indicatif = { version = "0.17.6", features = ["futures"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
csv = "1.2.2"
